# quaternions

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp  quaternion.cpp
src/include/: quaternion.hpp
tests/: CMakeLists.txt  test_quaternion.cpp
